deploy_k8s/for_cronExecutable/3_auth/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-for-prometheus
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ing-prometheus-auth
    nginx.ingress.kubernetes.io/auth-realm: "Need view with credentials"
spec:
  rules:
    - host: prometheus.greatics.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
